# MinecraftBlockRenderer

./: .gitignore  CMakeLists.txt  README.md  build_project.bat
include/: helper_functions.h  matrix_helper.h  shader_loader.h  texture_loader.h  vertices.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: helper_functions.cpp  main.cpp  matrix_helper.cpp  shader_loader.cpp  texture_loader.cpp  vertices.cpp
